<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/main_text_view1"
       android:text="@string/logo"
       style="@style/TextStyle.H1_big"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="170dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       />

   <Button
       android:id="@+id/discover_platform"
       android:text="@string/discover_platform"
       style="@style/ButtonStyle"
       android:background="@drawable/shape_button"
       android:onClick="onPlatform"
       android:textAllCaps="false"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@id/main_text_view2"
       />

   <TextView
       android:id="@+id/main_text_view2"
       android:text="@string/have_account"
       android:clickable="true"
       android:onClick="onLogIn"
       style="@style/TextStyle.P"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="100dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       />

</androidx.constraintlayout.widget.ConstraintLayout>